Hosting Friend Website

--- a/RestMySQL/src/main/resources/static/index.css
+++ b/RestMySQL/src/main/resources/static/index.css
@@ -10,7 +10,7 @@ body{
 
 .card-deck{
 	
-	width:1000px;
+	width:1500px;
 }
 
 .card-header{
@@ -36,6 +36,20 @@ body{
 .navBar{
 	font-size: 25px;
 	height: 50px;
-	background-color:#E8E8E8;
+	background-color:#6495ED;
 	font-family: "Times New Roman";
+	color: red;
+}
+
+.nav-item{
+	color:red;
+}
+
+.nav-link{
+	color:#FFF8DC;
+}
+
+h2{
+	
+	text-align: center;
 }
